# native-integers-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
native_integers/: __init__.py  int32.pyx  int64.pyx  uint32.pyx  uint64.pyx
tests/: test_native_integers.py
